--- a/companies.html
+++ b/companies.html
@@ -1,6 +1,11 @@
 ---
 layout: default
+title: Companies using Scrapy
+permalink: companies/
 ---
+{% assign stable = site.data.scrapy.stable %}
+{% assign oldstable = site.data.scrapy.oldstable %}
+{% assign devel = site.data.scrapy.development %}
 
 		<div class="container">
 
@@ -11,7 +16,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://parsely.com/">
-						<img src="img/01-parsely-logo.png" />
+						<img src="../img/01-parsely-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -21,7 +26,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://directemployersfoundation.org/">
-						<img src="img/02-direct-employers-logo.png" />
+						<img src="../img/02-direct-employers-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -31,7 +36,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.weotta.com/">
-						<img src="img/03-weotta-logo.png" />
+						<img src="../img/03-weotta-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -41,7 +46,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.bitehunter.com/">
-						<img src="img/04-bite-hunter-logo.png" />
+						<img src="../img/04-bite-hunter-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -51,7 +56,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.innerballoons.com/">
-						<img src="img/05-inner-balloons-logo.png" />
+						<img src="../img/05-inner-balloons-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -61,7 +66,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.flax.co.uk/">
-						<img src="img/06-flax-logo.png" />
+						<img src="../img/06-flax-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -71,7 +76,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://medialab.sciences-po.fr/">
-						<img src="img/07-media-sciences-logo.png" />
+						<img src="../img/07-media-sciences-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -81,7 +86,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.lyst.com/">
-						<img src="img/08-lyst-logo.png" />
+						<img src="../img/08-lyst-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -91,7 +96,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="https://scraperwiki.com/">
-						<img src="img/09-scraper-wiki-logo.png" />
+						<img src="../img/09-scraper-wiki-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -101,7 +106,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.data.gov.uk/">
-						<img src="img/10-datagovuk-logo.png" />
+						<img src="../img/10-datagovuk-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -111,7 +116,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.oposicionesaldia.com/">
-						<img src="img/11-oposiciones-logo.png" />
+						<img src="../img/11-oposiciones-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -121,7 +126,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.iberstudios.com/">
-						<img src="img/12-iberestudios-logo.png" />
+						<img src="../img/12-iberestudios-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -131,7 +136,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.usedaywatch.com/">
-						<img src="img/13-daywatch-logo.png" />
+						<img src="../img/13-daywatch-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -141,7 +146,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.pricewiki.com/">
-						<img src="img/14-pricewiki-logo.png" />
+						<img src="../img/14-pricewiki-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -151,7 +156,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://dealshelve.com/">
-						<img src="img/15-dealshelve-logo.png" />
+						<img src="../img/15-dealshelve-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -161,7 +166,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.careerbuilder.com/">
-						<img src="img/16-careerbuilder-logo.png" />
+						<img src="../img/16-careerbuilder-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -171,7 +176,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://grablab.org/">
-						<img src="img/17-grablab-logo.png" />
+						<img src="../img/17-grablab-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -181,7 +186,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.simplespot.it/">
-						<img src="img/18-simplespot-logo.png" />
+						<img src="../img/18-simplespot-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -191,7 +196,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.monetate.com/">
-						<img src="img/19-monetate-logo.png" />
+						<img src="../img/19-monetate-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -201,7 +206,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.clanslots.com/">
-						<img src="img/20-clanslots-logo.png" />
+						<img src="../img/20-clanslots-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -211,7 +216,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.alisverisrobotu.com/">
-						<img src="img/21-alisveris-logo.png" />
+						<img src="../img/21-alisveris-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -221,7 +226,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.tuvalabs.com/">
-						<img src="img/22-tuvalabs-logo.png" />
+						<img src="../img/22-tuvalabs-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -231,7 +236,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.alistek.com/">
-						<img src="img/23-alistek-logo.png" />
+						<img src="../img/23-alistek-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -241,7 +246,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.zhitongba.com/">
-						<img src="img/24-Zhitongba-logo.png" />
+						<img src="../img/24-Zhitongba-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -251,7 +256,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.offertazo.com/">
-						<img src="img/25-offertazo-logo.png" />
+						<img src="../img/25-offertazo-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -261,7 +266,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.lionseek.com/">
-						<img src="img/26-lionseek-logo.png" />
+						<img src="../img/26-lionseek-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -271,7 +276,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.stilivo.com/">
-						<img src="img/27-stilivo-logo.png" />
+						<img src="../img/27-stilivo-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -281,7 +286,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.mapado.com/">
-						<img src="img/28-mapado-logo.png" />
+						<img src="../img/28-mapado-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -291,7 +296,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://oony.com/">
-						<img src="img/29-oony-logo.png" />
+						<img src="../img/29-oony-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -301,7 +306,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://woppu.my/">
-						<img src="img/30-woppu-logo.png" />
+						<img src="../img/30-woppu-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -311,7 +316,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://jobuzu.co.uk/">
-						<img src="img/31-jobuzu-logo.png" />
+						<img src="../img/31-jobuzu-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -321,7 +326,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.zopper.com/">
-						<img src="img/32-zopper-logo.png" />
+						<img src="../img/32-zopper-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -331,7 +336,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.coenterprise.com/solutions/applications/bookradar">
-						<img src="img/33-bookradar-logo.png" />
+						<img src="../img/33-bookradar-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -341,7 +346,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://wp-rocket.me/">
-						<img src="img/34-wprocket-logo.png" />
+						<img src="../img/34-wprocket-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -351,7 +356,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.cavucador.com.br/">
-						<img src="img/35-cavucador-logo.png" />
+						<img src="../img/35-cavucador-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -361,7 +366,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://competera.net/">
-						<img src="img/36-competera-logo.png" />
+						<img src="../img/36-competera-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -371,7 +376,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.tarlabs.com/">
-						<img src="img/37-tarlabs-logo.png" />
+						<img src="../img/37-tarlabs-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -381,7 +386,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.jobijoba.com/">
-						<img src="img/38-jobijoba-logo.png" />
+						<img src="../img/38-jobijoba-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -391,7 +396,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://dataquarry.co.uk/">
-						<img src="img/39-dataquarry-logo.png" />
+						<img src="../img/39-dataquarry-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -401,7 +406,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://utero.pe/">
-						<img src="img/40-utero-logo.png" />
+						<img src="../img/40-utero-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -411,7 +416,7 @@ layout: default
 
 				<div class="company-box">
 					<a href="http://www.shimply.com/">
-						<img src="img/41-shimply-logo.png" />
+						<img src="../img/41-shimply-logo.png" />
 					</a>
 					<hr />
 					<p>
@@ -443,12 +448,12 @@ layout: default
 					</div>
 
 					<div class="block-right">
-						<a href="support.html">
+						<a href="../support/">
 							<h2><span class="regular">Commercial support?</span> <br /> Meet the Scrapy pros</h2>
-						 	<img src="img/scrapy-pros.png" />
+						 	<img src="../img/scrapy-pros.png" />
 						</a>
 						<p><span class="big-font">Be a part of the Community</span> <br />
-							<a href="community.html">Join our channels and collaborate!</a>.</p>
+							<a href="../community/">Join our channels and collaborate!</a>.</p>
 					</div>
 				</div>
 			</div>
