--- a/support.html
+++ b/support.html
@@ -1,6 +1,11 @@
 ---
 layout: default
+title: Commercial Support
+permalink: support/
 ---
+{% assign stable = site.data.scrapy.stable %}
+{% assign oldstable = site.data.scrapy.oldstable %}
+{% assign devel = site.data.scrapy.development %}
 
 		<div class="container">
 
@@ -12,7 +17,7 @@ layout: default
 				<div class="company-longbox">
 					<div class="logo-wrap">
 						<a href="http://www.scrapinghub.com/">
-							<img src="img/scrapinghub-logo.png" />
+							<img src="../img/scrapinghub-logo.png" />
 						</a>
 					</div>
 
@@ -24,7 +29,7 @@ layout: default
 				<div class="company-longbox">
 					<div class="logo-wrap">
 						<a href="http://www.flax.co.uk/">
-							<img src="img/flax-logo.gif" />
+							<img src="../img/flax-logo.gif" />
 						</a>
 					</div>
 
@@ -36,7 +41,7 @@ layout: default
 				<div class="company-longbox">
 					<div class="logo-wrap">
 						<a href="http://www.goscrape.com/">
-							<img src="img/goscrape-logo.png" />
+							<img src="../img/goscrape-logo.png" />
 						</a>
 					</div>
 
@@ -48,7 +53,7 @@ layout: default
 				<div class="company-longbox">
 					<div class="logo-wrap">
 						<a href="http://sophilabs.com/">
-							<img src="img/sophilabs-logo.png" />
+							<img src="../img/sophilabs-logo.png" />
 						</a>
 					</div>
 
@@ -60,7 +65,7 @@ layout: default
 				<div class="company-longbox">
 					<div class="logo-wrap">
 						<a href="http://arbisoft.com/services/">
-							<img src="img/arbisoft-logo.png" />
+							<img src="../img/arbisoft-logo.png" />
 						</a>
 					</div>
 
@@ -72,7 +77,7 @@ layout: default
 				<div class="company-longbox">
 					<div class="logo-wrap">
 						<a href="http://www.tryolabs.com/">
-							<img src="img/tryolabs-logo.png" />
+							<img src="../img/tryolabs-logo.png" />
 						</a>
 					</div>
 					<p>
@@ -83,7 +88,7 @@ layout: default
 				<div class="company-longbox">
 					<div class="logo-wrap">
 						<a href="http://thalasar.com/custom-application-development/scrapy-custom-development-and-support">
-							<img src="img/thalasar-logo.jpg" />
+							<img src="../img/thalasar-logo.jpg" />
 						</a>
 					</div>
 					<p class="top-margin">
@@ -94,7 +99,7 @@ layout: default
 				<div class="company-longbox">
 					<div class="logo-wrap top-margin">
 						<a href="http://dataquarry.co.uk/">
-							<img src="img/dataquarry-logo.png" />
+							<img src="../img/dataquarry-logo.png" />
 						</a>
 					</div>
 					<p class="top-margin">
@@ -126,12 +131,12 @@ layout: default
 					</div>
 
 					<div class="block-right">
-						<a href="http://doc.scrapy.org/en/latest/intro/overview.html">
+						<a href="http://doc.scrapy.org/en/{{ stable.version }}/intro/overview.html">
 							<h2><span class="regular">Want to learn?</span> <br /> Scrapy at a glance</h2>
 						 	<i class="fa fa-file-text-o fa-3x"></i>
 						</a>
 						<p><span class="big-font">Who is using Scrapy?</span> <br />
-							<a href="jobs.html">Find companies and products that use Scrapy</a>.</p>
+							<a href="../companies/">Find companies and products that use Scrapy</a>.</p>
 					</div>
 				</div>
 			</div>
