--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ title: A Fast and Powerful Scraping and Web Crawling Framework
         <p>Sample Scrapy Code</p>
       </div>
       <div class="box-code">
-        <p><span class="prompt" onselectstart="return false">$</span> pip install scrapy <br />
-        <span class="prompt" onselectstart="return false">$</span> cat > myspider.py &lt;&lt;EOF <br /> <br />
-        <span class="green bold">from</span> <span class="blue bold">scrapy</span> <span class="green bold">import</span> Spider, Item, Field <br />
+        <p><span class="prompt" onselectstart="return false"><i class="fa fa-dollar"></i></span> pip install scrapy<br />
+        <span class="prompt" onselectstart="return false"><i class="fa fa-dollar"></i></span> cat > myspider.py &lt;&lt;EOF<br /><br />
+        <span class="green bold">from</span> <span class="blue bold">scrapy</span> <span class="green bold">import</span> Spider, Item, Field<br />
         <br />
         <span class="green bold">class</span> <span class="blue bold">Post</span>(Item):<br />
             <span class="tab">title = Field()</span><br />
@@ -53,8 +53,8 @@ title: A Fast and Powerful Scraping and Web Crawling Framework
         <span class="tab green bold">def</span> <span class="blue">parse</span>(<span class="green">self</span>, response):<br />
         <span class="tab2x green bold">return</span> [Post(title=e.extract()) <span class="green bold">for</span> e <span class="green bold">in</span> response.css(<span class="blue">"h2 a::text"</span>)]<br />
         <br />
-        EOF <br />
-        <span class="prompt" onselectstart="return false">$</span> scrapy runspider myspider.py</p>
+        EOF<br />
+        <span class="prompt" onselectstart="return false"><i class="fa fa-dollar"></i></span> scrapy runspider myspider.py</p>
       </div>
     </div>
 
