--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: A Fast and Powerful Scraping and Web Crawling Framework
       <div class="big-button">
         <h2>Install latest version:</h2>
         <p> <i class="fa fa-download"> </i> Scrapy {{ stable.version }} </p>
-        <div class="install-code"><span class="prompt" onselectstart="return false">$</span> pip install scrapy</div>
+        <div class="install-code"><span class="prompt" onselectstart="return false"><i class="fa fa-dollar"></i></span> pip install scrapy</div>
         <a href="http://pypi.python.org/pypi/Scrapy"><button>PyPI</button></a>
         <a href="http://doc.scrapy.org/en/{{ stable.version }}/topics/ubuntu.html"><button>Ubuntu Package</button></a>
         <a href="https://github.com/scrapy/scrapy/tarball/{{ stable.version }}"><button>Tarball</button></a>
