Adjusting Sample Code Issues #3

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ title: A Fast and Powerful Scraping and Web Crawling Framework
         <span class="green bold">from</span> <span class="blue bold">scrapy</span> <span class="green bold">import</span> Spider, Item, Field<br />
         <br />
         <span class="green bold">class</span> <span class="blue bold">Post</span>(Item):<br />
-            <span class="tab">title = Field()</span><br />
+            <span>&nbsp;&nbsp;&nbsp;&nbsp;title = Field()</span><br />
         <br />
         <span class="green bold">class</span> <span class="blue bold">BlogSpider</span>(Spider):<br />
-        <span class="tab">name, start_urls = '<span class="blue">blogspider</span>', ['<span class="blue">http://blog.scrapinghub.com</span>']</span><br />
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;name, start_urls = '<span class="blue">blogspider</span>', ['<span class="blue">http://blog.scrapinghub.com</span>']</span><br />
         <br />
-        <span class="tab green bold">def</span> <span class="blue">parse</span>(<span class="green">self</span>, response):<br />
-        <span class="tab2x green bold">return</span> [Post(title=e.extract()) <span class="green bold">for</span> e <span class="green bold">in</span> response.css(<span class="blue">"h2 a::text"</span>)]<br />
+        <span class="green bold">&nbsp;&nbsp;&nbsp;&nbsp;def</span> <span class="blue">parse</span>(<span class="green">self</span>, response):<br />
+        <span class="green bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return</span> [Post(title=e.extract()) <span class="green bold">for</span> e <span class="green bold">in</span> response.css(<span class="blue">"h2 a::text"</span>)]<br />
         <br />
         EOF<br />
         <span class="prompt" onselectstart="return false"><i class="fa fa-dollar"></i></span> scrapy runspider myspider.py</p>
